src/semantic/tests/data/negative/return-outside-function-1.hsh
let condition

if condition then
	return
end
